Admin panel SimpleNotes section added

--- a/Presentation/Nop.Web/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/Presentation/Nop.Web/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -311,6 +311,7 @@
             </script>
         </text>
     }
+    @RenderSection("Scripts", required: false)
     @NopHtml.GenerateScripts(ResourceLocation.Footer)
     @NopHtml.GenerateInlineScripts(ResourceLocation.Footer)
 </body>
